# django-debug-toolbar

./: Makefile  README.md  pyproject.toml
core/: manage.py
core/backend/: urls.py
core/backend/settings/components/: common.py
core/backend/settings/environments/: production.py
